attempt to fix example mobile spacing

--- a/public_html/assets/css/styles.css
+++ b/public_html/assets/css/styles.css
@@ -862,7 +862,7 @@ MEDIA QUERIES
 	}
 
 	.example {
-		padding: 150px;
+		padding: 150px 0 !important;
 	}
 
 }
